feat(specs): Patch functionality for rule sets
Added specs for updating rule sets and paths for them as well.
