# specs/swagger.json
@@ -163,6 +163,60 @@
             "description": "Not Found"
           }
         }
+      },
+      "patch": {
+        "tags": [
+          "rule_sets"
+        ],
+        "summary": "Updates a rule set",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string",
+              "pattern": "^[a-fA-F0-9]{24}$"
+            },
+            "required": true,
+            "description": "Id of the rule set you want to update"
+          }
+        ],
+        "requestBody": {
+          "description": "rule set",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/rule_set_patch"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/named_rule_set"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error_list"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/rule_sets": {
@@ -634,6 +688,16 @@
             "pattern": "^[a-fA-F0-9]{24}$",
             "readOnly": true
           },
+          "Date_Created": {
+            "type": "string",
+            "format": "date-time",
+            "readOnly": true
+          },
+          "Date_Last_Modified": {
+            "type": "string",
+            "format": "date-time",
+            "readOnly": true
+          },
           "name": {
             "type": "string"
           },
@@ -807,6 +871,192 @@
         "required": [
           "name",
           "rules"
+        ]
+      },
+      "rule_set_patch": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "rules": {
+            "type": "array",
+            "minItems": 1,
+            "items": {
+              "type": "object",
+              "properties": {
+                "conditions": {
+                  "type": "object",
+                  "properties": {
+                    "any": {
+                      "type": "array",
+                      "minItems": 1,
+                      "items": {
+                        "anyOf": [
+                          {
+                            "type": "object",
+                            "properties": {
+                              "fact": {
+                                "type": "string"
+                              },
+                              "operator": {
+                                "type": "string",
+                                "enum": [
+                                  "equal",
+                                  "notEqual",
+                                  "lessThan",
+                                  "lessThanInclusive",
+                                  "greaterThan",
+                                  "greaterThanInclusive",
+                                  "in",
+                                  "notIn",
+                                  "contains",
+                                  "doesNotContain"
+                                ]
+                              },
+                              "value": {
+                                "anyOf": [
+                                  {
+                                    "type": "number"
+                                  },
+                                  {
+                                    "type": "integer"
+                                  },
+                                  {
+                                    "type": "string"
+                                  },
+                                  {
+                                    "type": "boolean"
+                                  },
+                                  {
+                                    "type": "array"
+                                  },
+                                  {
+                                    "type": "object"
+                                  }
+                                ]
+                              }
+                            },
+                            "required": [
+                              "fact",
+                              "operator",
+                              "value"
+                            ]
+                          },
+                          {
+                            "$ref": "#/components/schemas/condition"
+                          }
+                        ]
+                      }
+                    },
+                    "all": {
+                      "type": "array",
+                      "minItems": 1,
+                      "items": {
+                        "anyOf": [
+                          {
+                            "type": "object",
+                            "properties": {
+                              "fact": {
+                                "type": "string"
+                              },
+                              "operator": {
+                                "type": "string",
+                                "enum": [
+                                  "equal",
+                                  "notEqual",
+                                  "lessThan",
+                                  "lessThanInclusive",
+                                  "greaterThan",
+                                  "greaterThanInclusive",
+                                  "in",
+                                  "notIn",
+                                  "contains",
+                                  "doesNotContain"
+                                ]
+                              },
+                              "value": {
+                                "anyOf": [
+                                  {
+                                    "type": "number"
+                                  },
+                                  {
+                                    "type": "integer"
+                                  },
+                                  {
+                                    "type": "string"
+                                  },
+                                  {
+                                    "type": "boolean"
+                                  },
+                                  {
+                                    "type": "array"
+                                  },
+                                  {
+                                    "type": "object"
+                                  }
+                                ]
+                              }
+                            },
+                            "required": [
+                              "fact",
+                              "operator",
+                              "value"
+                            ]
+                          },
+                          {
+                            "$ref": "#/components/schemas/condition"
+                          }
+                        ]
+                      }
+                    }
+                  },
+                  "oneOf": [
+                    {
+                      "required": [
+                        "all"
+                      ]
+                    },
+                    {
+                      "required": [
+                        "any"
+                      ]
+                    }
+                  ]
+                },
+                "priority": {
+                  "type": "integer"
+                },
+                "event": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string"
+                    },
+                    "params": {
+                      "type": "object"
+                    }
+                  }
+                }
+              },
+              "required": [
+                "conditions",
+                "event"
+              ]
+            }
+          }
+        },
+        "anyOf": [
+          {
+            "required": [
+              "name"
+            ]
+          },
+          {
+            "required": [
+              "rules"
+            ]
+          }
         ]
       },
       "error_list": {
